infra/k8s/tenant-management/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tenant-management
  namespace: tomsblog
  labels:
    app: tenant-management
spec:
  type: ClusterIP
  selector:
    app: tenant-management
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 9090
      targetPort: grpc
      protocol: TCP
      name: grpc
