infra/k8s/tenant-management/authz-policy-probes.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-probes-to-tenant-management
  namespace: tomsblog
  labels:
    app: tenant-management
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: tenant-management-http
  requiredAuthenticationRefs:
    - name: kubelet-probes-tenant-management
      kind: NetworkAuthentication
      group: policy.linkerd.io
