infra/k8s/tenant-management/authz-policy-traefik.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-traefik-to-tenant-management
  namespace: tomsblog
  labels:
    app: tenant-management
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: tenant-management-http
  requiredAuthenticationRefs:
    - name: traefik-identity
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
